# WEB_HW_7

./: config.ini  main.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: c1d02f872024_init.py
src/: db.py  models.py
