[tool.poetry]
name = "web-hw-7"
version = "0.1.0"
description = ""
authors = ["Mariia Bulavina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.25"
faker = "^22.4.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
